kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reach-tech-doc-${DRONE_SOURCE_BRANCH}
