kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-doc
  namespace: reach-tech-doc-${DRONE_REPO_BRANCH}
spec:
  selector:
    app: tech-doc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
